src/epub/css/local.css
@charset "utf-8";
@namespace epub "http://www.idpf.org/2007/ops";
@namespace xml "http://www.w3.org/XML/1998/namespace";

blockquote[xml|lang]{
	font-style: italic;
}

footer{
	margin-top: 1em;
	text-align: right;
}

/* Bridgehead */
[epub|type~="bridgehead"]{
	display: inline-block;
	font-style: italic;
	max-width: 60%;
	text-align: justify;
	text-indent: 0;
}

[epub|type~="z3998:poem"] [epub|type~="bridgehead"]{
	text-align: justify;
}

[epub|type~="z3998:poem"] [epub|type~="bridgehead"] span{
	display: inline;
	padding: 0;
	text-indent: 0;
}
/* End bridgehead */

/* Hymn, poem, verse */
[epub|type~="z3998:poem"] hgroup p{
	text-align: center;
}

[epub|type~="z3998:hymn"] p,
[epub|type~="z3998:poem"] p,
[epub|type~="z3998:verse"] p{
	text-align: initial;
	text-indent: 0;
}

[epub|type~="z3998:hymn"] p > span,
[epub|type~="z3998:poem"] p > span,
[epub|type~="z3998:verse"] p > span{
	display: block;
	padding-left: 1em;
	text-indent: -1em;
}

[epub|type~="z3998:hymn"] p > span + br,
[epub|type~="z3998:poem"] p > span + br,
[epub|type~="z3998:verse"] p > span + br{
	display: none;
}

[epub|type~="z3998:hymn"] p + p,
[epub|type~="z3998:poem"] p + p{
	margin-top: 1em;
}

.line-break span:first-child{
	vertical-align: 100%;
}
/* End hymn, poem, verse */

